--- a/retiro.html
+++ b/retiro.html
@@ -7,6 +7,27 @@
   <title>retiro</title>
 </head>
 <body>
+  <!--NUEVO-->
+  <!--Formulario para retirar dinero de tu cuenta -->
+  <form action="">
+    <h2>Retiro de Dinero</h2>
+
+    <label for="tipoCuenta">Tipo de Cuenta</label>
+    <select name="tipoCuenta" id="tipoCuenta">
+       <option value="" disabled selected>Seleccione el tipo de su cuenta</option> <!-- Opción por defecto -->
+        <option value="ahorros">Ahorros</option>
+        <option value="corriente">Corriente</option>
+    </select> <br><br>
+
+    <label for="cuenta">Número de Cuenta:</label>
+    <input type="text" id="cuenta" name="cuenta" placeholder="Ingrese su número de cuenta" required>
+    <br><br>
+
+    <label for="monto">Monto a Retirar:</label>
+    <input type="number" id="monto" name="monto" placeholder="Ingrese el monto a retirar" required>
+
+    <input type="submit" value="Retirar">
+</form>
   <script type="module" src="./script.js"></script>
 </body>
 </html>
