--- a/calcular_interes.html
+++ b/calcular_interes.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>calcular interes</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calcular Interés - Cajero Online</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-  <script type="module" src="./script.js"></script>
+    <div class="container">
+        <h1 class="text-center my-4">Calcular Interés</h1>
+        <form id="calcularInteresForm">
+            <div class="mb-3">
+                <label for="cuenta" class="form-label">Número de Cuenta de Ahorros:</label>
+                <input type="text" class="form-control" id="cuenta" placeholder="Ingrese número de cuenta" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Calcular Interés</button>
+        </form>
+        <div id="resultado" class="mt-4"></div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="./script.js"></script>
 </body>
 </html>
