--- a/consultar_saldo.html
+++ b/consultar_saldo.html
@@ -1,32 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Consultar Saldo</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Consultar Saldo - Cajero Online</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-
 <body>
-  <!-- NUEVO -->
-  <!--Formulario para consultar el saldo de una cuenta-->
-  <form action="">
-    <h2>Consulta de Saldo</h2>
-
-    <label for="tipoCuenta">Tipo de Cuenta</label>
-    <select name="tipoCuenta" id="tipoCuenta">
-       <option value="" disabled selected>Seleccione el tipo de cuenta</option> <!-- Opción por defecto -->
-        <option value="ahorros">Ahorros</option>
-        <option value="corriente">Corriente</option>
-    </select> <br><br>
-    
-    <label for="cuenta">Número de Cuenta:</label>
-    <input type="text" id="cuenta" name="cuenta" placeholder="Ingrese número de cuenta" required>
-
-    <input type="submit" value="Consultar Saldo">
-</form>
-  <script type="module" src="./script.js"></script>
+    <div class="container">
+        <h1 class="text-center my-4">Consulta de Saldo</h1>
+        <form id="consultaSaldoForm">
+            <div class="mb-3">
+                <label for="tipoCuenta" class="form-label">Tipo de Cuenta</label>
+                <select class="form-select" id="tipoCuenta" required>
+                    <option value="" disabled selected>Seleccione el tipo de cuenta</option>
+                    <option value="ahorros">Ahorros</option>
+                    <option value="corriente">Corriente</option>
+                </select>
+            </div>
+            <div class="mb-3">
+                <label for="cuenta" class="form-label">Número de Cuenta:</label>
+                <input type="text" class="form-control" id="cuenta" placeholder="Ingrese número de cuenta" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Consultar Saldo</button>
+        </form>
+        <div id="resultado" class="mt-4"></div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="./script.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const resultado = localStorage.getItem('consultaSaldoResultado');
+            if (resultado) {
+                document.getElementById('resultado').innerHTML = `<div class="alert alert-info">${resultado}</div>`;
+                localStorage.removeItem('consultaSaldoResultado');
+            }
+        });
+    </script>
 </body>
-
 </html>
