--- a/deposito.html
+++ b/deposito.html
@@ -1,32 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>deposito</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Depósito - Cajero Online</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-  <!--NUEVO-->
-  <!-- Formulario para depositar dinero a una cuenta-->
-  <form action="">
-    <h2>Depósito de Dinero</h2>
-
-    <label for="tipoCuenta">Tipo de Cuenta</label>
-    <select name="tipoCuenta" id="tipoCuenta">
-       <option value="" disabled selected>Seleccione el tipo de cuenta</option> <!-- Opción por defecto -->
-        <option value="ahorros">Ahorros</option>
-        <option value="corriente">Corriente</option>
-    </select> <br><br>
-
-    <label for="cuenta">Número de Cuenta:</label>
-    <input type="text" id="cuenta" name="cuenta" placeholder="Ingrese número de cuenta" required>
-    <br><br>
-    <label for="monto">Monto a Depositar:</label>
-    <input type="number" id="monto" name="monto" placeholder="Ingrese el monto" required>
-
-    <input type="submit" value="Depositar">
-</form>
-  <script type="module" src="./script.js"></script>
+    <div class="container">
+        <h1 class="text-center my-4">Depósito de Dinero</h1>
+        <form id="depositoForm">
+            <div class="mb-3">
+                <label for="tipoCuenta" class="form-label">Tipo de Cuenta</label>
+                <select class="form-select" id="tipoCuenta" required>
+                    <option value="" disabled selected>Seleccione el tipo de cuenta</option>
+                    <option value="ahorros">Ahorros</option>
+                    <option value="corriente">Corriente</option>
+                </select>
+            </div>
+            <div class="mb-3">
+                <label for="cuenta" class="form-label">Número de Cuenta:</label>
+                <input type="text" class="form-control" id="cuenta" placeholder="Ingrese número de cuenta" required>
+            </div>
+            <div class="mb-3">
+                <label for="monto" class="form-label">Monto a Depositar:</label>
+                <input type="number" class="form-control" id="monto" placeholder="Ingrese el monto" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Depositar</button>
+        </form>
+        <div id="resultado" class="mt-4"></div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="./script.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const resultado = localStorage.getItem('depositoResultado');
+            if (resultado) {
+                document.getElementById('resultado').innerHTML = `<div class="alert alert-info">${resultado}</div>`;
+                localStorage.removeItem('depositoResultado');
+            }
+        });
+    </script>
 </body>
 </html>
