--- a/login.html
+++ b/login.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesión - Cajero Online</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -17,7 +16,7 @@
             <div class="card-body">
                 <form id="login-form">
                     <div class="mb-3">
-                        <label for="username" class="form-label">Nombre de Usuario</label>
+                        <label for="username" class="form-label">Correo Del Usuario</label>
                         <input type="text" class="form-control" id="username" required>
                     </div>
                     <div class="mb-3">
@@ -28,15 +27,19 @@
                 </form>
             </div>
         </div>
+        <div id="resultado" class="mt-4"></div>
     </div>
 
-    <!-- Bootstrap JS y dependencias -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
-    document.getElementById('login-form').addEventListener('submit', function(event) {
-        event.preventDefault();
-        window.location.href = 'seleccion_cuenta.html'; // Redirigir a la selección de cuenta
-    });
-  </script>
-  </body>
-  </html>
+    <script type="module" src="./script.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const resultado = localStorage.getItem('loginResultado');
+            if (resultado) {
+                document.getElementById('resultado').innerHTML = `<div class="alert alert-info">${resultado}</div>`;
+                localStorage.removeItem('loginResultado');
+            }
+        });
+    </script>
+</body>
+</html>
