--- a/register.html
+++ b/register.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro de Usuario - Cajero Online</title>
-    <!-- Bootstrap CSS -->
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -16,7 +15,6 @@
             </div>
             <div class="card-body">
                 <form id="registration-form">
-                    <!-- Campos de Registro -->
                     <div class="mb-3">
                         <label for="nombre" class="form-label">Nombre Completo</label>
                         <input type="text" class="form-control" id="nombre-cliente" required>
@@ -61,18 +59,19 @@
                 </form>
             </div>
         </div>
+        <div id="resultado" class="mt-4"></div>
     </div>
 
-    <!-- Bootstrap JS y dependencias -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Script para manejar el registro -->
+    <script type="module" src="./script.js"></script>
     <script>
-        document.getElementById('registration-form').addEventListener('submit', function(event) {
-            event.preventDefault();
-            window.location.href = 'seleccion_cuenta.html'; // Redirigir a la selección de cuenta
+        document.addEventListener('DOMContentLoaded', () => {
+            const resultado = localStorage.getItem('registroResultado');
+            if (resultado) {
+                document.getElementById('resultado').innerHTML = `<div class="alert alert-info">${resultado}</div>`;
+                localStorage.removeItem('registroResultado');
+            }
         });
     </script>
-    <script type="module" src="./script.js"></script>
 </body>
 </html>
