--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
     <div class="container">
         <p>&copy; 2024 Cajero Online. Todos los derechos reservados.</p>
         <p>
-            <a href="#">Términos de Servicio</a> | 
-            <a href="#">Política de Privacidad</a> | 
+            <a href="#">Términos de Servicio</a> 
+            <a href="#">Política de Privacidad</a> 
             <a href="#">Contacto</a>
         </p>
     </div>
