--- a/login.html
+++ b/login.html
@@ -9,15 +9,15 @@
 </head>
 <body>
     <div class="container">
-        <div class="card login-card">
+        <div class="card login-card mt-5">
             <div class="card-header bg-primary text-white text-center">
                 <h3>Iniciar Sesión</h3>
             </div>
             <div class="card-body">
                 <form id="login-form">
                     <div class="mb-3">
-                        <label for="username" class="form-label">Correo Del Usuario</label>
-                        <input type="text" class="form-control" id="username" required>
+                        <label for="username" class="form-label">Correo Electrónico</label>
+                        <input type="email" class="form-control" id="username" required>
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label">Contraseña</label>
