--- a/seleccion_cuenta.html
+++ b/seleccion_cuenta.html
@@ -4,17 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seleccionar Tipo de Cuenta - Cajero Online</title>
-    <!-- Bootstrap CSS -->
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <!-- Contenedor Principal -->
     <div class="container text-center">
-        <div class="account-selection-card bg-white">
+        <div class="account-selection-card bg-white mt-5 p-4 rounded shadow">
             <h2 class="my-4">Selecciona tu Tipo de Cuenta</h2>
+            <p class="lead mb-4" id="accountNumber"></p>
             <p class="lead">Por favor, elige el tipo de cuenta para continuar:</p>
-            <!-- Botones de Selección de Tipo de Cuenta -->
             <div class="d-grid gap-3">
                 <button class="btn btn-primary btn-lg" id="ahorros-btn">Cuenta de Ahorros</button>
                 <button class="btn btn-success btn-lg" id="corriente-btn">Cuenta Corriente</button>
@@ -22,22 +20,39 @@
         </div>
     </div>
 
-    <!-- Bootstrap JS y dependencias -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Script para Manejar la Redirección -->
+    <script type="module" src="./script.js"></script>
     <script>
-        // Selecciona los botones por su ID
-        const ahorroBtn = document.getElementById('ahorros-btn');
-        const corrienteBtn = document.getElementById('corriente-btn');
+        document.addEventListener('DOMContentLoaded', function() {
+            const currentUser = JSON.parse(localStorage.getItem('currentUser'));
+            const accountNumberElement = document.getElementById('accountNumber');
+            
+            if (currentUser && currentUser.numeroCuenta) {
+                accountNumberElement.textContent = `Tu número de cuenta es: ${currentUser.numeroCuenta}`;
+            } else {
+                accountNumberElement.textContent = 'Número de cuenta no disponible';
+            }
 
-        // Asigna el evento "click" para cada botón
-        ahorroBtn.addEventListener('click', function() {
-            window.location.href = 'cuenta_ahorro.html'; // Redirige a la página de cuenta de ahorros
-        });
+            const ahorroBtn = document.getElementById('ahorros-btn');
+            const corrienteBtn = document.getElementById('corriente-btn');
 
-        corrienteBtn.addEventListener('click', function() {
-            window.location.href = 'cuenta_corriente.html'; // Redirige a la página de cuenta corriente
+            function selectAccountType(type) {
+                if (currentUser) {
+                    currentUser.tipoCuenta = type;
+                    localStorage.setItem('currentUser', JSON.stringify(currentUser));
+                    window.location.href = type === 'ahorros' ? 'cuenta_ahorro.html' : 'cuenta_corriente.html';
+                } else {
+                    alert('Error: Usuario no encontrado');
+                }
+            }
+
+            ahorroBtn.addEventListener('click', function() {
+                selectAccountType('ahorros');
+            });
+
+            corrienteBtn.addEventListener('click', function() {
+                selectAccountType('corriente');
+            });
         });
     </script>
 </body>
